apps/myspotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myspotify
  namespace: default
  labels:
    app: myspotify
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: myspotify
  template:
    metadata:
      labels:
        app: myspotify
    spec:
      containers:
      - name: myspotify-server
        image: yooooomi/your_spotify_server:latest
        ports:
        - containerPort: 8080
          name: server
      - name: myspotify-web
        image: yooooomi/your_spotify_client:latest
        ports:
        - containerPort: 3000
          name: web
      - name: myspotify-mongo
        image: mongo:6.0
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
          mountPropagation: HostToContainer
        ports:
        - containerPort: 27071
          name: mongo
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: myspotify-mongo-data
