apps/myspotify/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myspotify-web
spec:
  selector:
    app: myspotify
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: myspotify-api
spec:
  selector:
    app: myspotify
  ports:
    - name: server
      protocol: TCP
      port: 8080
      targetPort: server
